Fixed an issue with the overlay being displayed on mobile phones

--- a/style.css
+++ b/style.css
@@ -37,6 +37,10 @@ h1 {
   display: none;
 }
 
+.overlay {
+  display: none;
+}
+
 .white {
   color: var(--heading-color);
 }
@@ -160,6 +164,7 @@ hr {
 
   .overlay {
     position: absolute;
+    display: block;
     pointer-events: none;
     width: 100%;
     height: 100%;
